feat(broker): implement producer logic

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ MINIO_ENDPOINT=localhost:your_minio_port
 MINIO_ACCESS_KEY_ID=minioadmin
 MINIO_SECRET_ACCESS_KEY=minioadmin
 MINIO_SSL_MODE=false
+
+NATS_URL=nats://localhost:4222
