refactor: structure of grpc gateway and remove unnecessary code

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 HTTP_PORT=:8080
 
+GRPC_PORT=:50051
+
 MINIO_ROOT_USER=img-compress
 MINIO_ROOT_PASSWORD=secretpswd123
 MINIO_ENDPOINT=localhost:your_minio_port
