refactor: total refactor

--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,22 @@ HTTP_PORT=:8080
 
 GRPC_PORT=:50051
 
+MINIO_PORT=9000
+MINIO_CONSOLE_PORT=9001
 MINIO_ROOT_USER=img-compress
 MINIO_ROOT_PASSWORD=secretpswd123
-MINIO_ENDPOINT=localhost:your_minio_port
+MINIO_ENDPOINT=localhost:${MINIO_PORT}
 MINIO_ACCESS_KEY_ID=img-compress
 MINIO_SECRET_ACCESS_KEY=secretpswd123
 MINIO_SSL_MODE=false
 
-NATS_URL=nats://localhost:4222
+NATS_PORT=4222
+NATS_MONITOR_PORT=8222
+NATS_URL=nats://localhost:${NATS_PORT}
+NATS_DOCKER_URL=nats://nats:${NATS_PORT}
+
+GRAFANA_PORT=13000
+GRAFANA_ADMIN_PSWD=admin
+
+IMAGE_CREATED_TOPIC=image.created
+IMAGE_STREAM=IMAGE_STREAM
