--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ services:
     image: minio/minio:latest
     container_name: MinIO
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      test: ["CMD", "curl", "-f", "http://localhost:${MINIO_PORT}/minio/health/live"]
       interval: 5s
       timeout: 3s
       retries: 10
     ports:
-      - "9000:9000"
-      - "9001:9001"
+      - "${MINIO_PORT}:9000"
+      - "${MINIO_CONSOLE_PORT}:9001"
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
@@ -23,8 +23,15 @@ services:
     image: nats:latest
     container_name: nats
     ports:
-      - "4222:4222"
-      - "8222:8222"
+      - "${NATS_PORT}:4222"
+      - "${NATS_MONITOR_PORT}:8222"
+    command: [
+      "-js",
+      "-m", "${NATS_MONITOR_PORT}",
+      "--store_dir", "/data"
+    ]
+    volumes:
+      - nats_data:/data
     networks:
       - app-net
 
@@ -32,24 +39,25 @@ services:
     build: .
     container_name: image-compressor-app
     ports:
-      - "8080:8080"
+      - "${HTTP_PORT}:8080"
     depends_on:
       minio:
         condition: service_healthy
       nats:
         condition: service_started
     environment:
-      HTTP_PORT: ":8080"
-      MINIO_ENDPOINT: minio:9000
+      HTTP_PORT: ${HTTP_PORT}
+      MINIO_ENDPOINT: ${MINIO_ENDPOINT}
       MINIO_ACCESS_KEY_ID: ${MINIO_ACCESS_KEY_ID}
       MINIO_SECRET_ACCESS_KEY: ${MINIO_SECRET_ACCESS_KEY}
-      MINIO_SSL_MODE: false
-      NATS_URL: nats://nats:4222
+      MINIO_SSL_MODE: ${MINIO_SSL_MODE}
+      NATS_URL: ${NATS_DOCKER_URL}
     networks:
       - app-net
 
 volumes:
   minio_data:
+  nats_data:
 
 networks:
   app-net:
